fixed alignment issues

--- a/developer_app/static/css/index.css
+++ b/developer_app/static/css/index.css
@@ -135,14 +135,25 @@ h1.developerName {
 
 
 /* SHARED STYLES */
-.address { background: rgba(0,0,0,.6); font-size: 20px; width: 100%; color: rgba(255,255,255,.4); padding: 10px 0;  font-family: 'Ubuntu Mono',; }
+.address { background: rgba(0,0,0,.7); font-size: 20px; width: 100%; color: rgba(255,255,255,.7); padding: 10px 0;  font-family: 'Ubuntu Mono',; }
 .description { margin: 5px auto; max-width: 400px; padding-bottom: 15px; }
-.portfolioWrap { width: 100%; margin: 0 auto; }
+/*.portfolioWrap { width: 100%; margin: 0 auto; }*/
 .portfoliotoggle { font-size: 50px; width: 100%; }
 .portfolioTitle { font-size: 30px; background: rgba(0,0,0,1); width: 100%; font-family: 'Raleway Dots'; text-align: center; margin: 0 auto; padding: 0;}
 .projectName { font-size: 22px;  font-family: 'Raleway Dots'; }
-.dropdown-menu { color: #3c3c3c; padding: 15px; }
 .dropdownTitle { padding: 12px 0 5px 0; font-size: 24px; font-family: 'Nixie One', cursive;}
+.projectCard {
+    font-family: 'Source Code Pro', ;
+    padding: 5px 15px;
+    background: rgba(0,0,0,.7);
+    color: rgba(255,255,255,1);
+}
+.projectCard h3 {
+    padding: 12px 0;
+}
+.projectCard p {
+    font-size: 18px;
+}
 /*a.gitlink {  }*/
 /*a.gitlink:hover {  }*/
 /*a.email { }*/
@@ -154,7 +165,7 @@ h1.developerName {
 img { width: 100%: height: 100%: }
 .imagewrap { width: 100%; height: 306px; overflow: hidden; margin: 0 auto; }
 .img-screenshot { margin: 0 auto; width: 100%; max-height: 300px; }
-.imageoverlay { height: 180px; background: rgba(0,0,0,.7); opacity: .8; padding: 15px 0; }
+.imageoverlay { height: 180px; background: rgba(0,0,0,.7); padding: 0; }
 .imageoverlay a { color: white; font-size: 30px; }
 .imageoverlay a:hover { text-decoration: none; color: rgba(0,255,0,1); }
 /* .img-cover { height: 250px; width: 100%; margin: 0 auto; } */
